# cproject

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  builder.Dockerfile  makefile  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
tests/unittest/: dummy.c##190df42ddc6de6167573b9d24d2d2115.gcov  project.yml
